--- a/action.yaml
+++ b/action.yaml
@@ -7,6 +7,9 @@ inputs:
   secret:
     description: Secret
     required: true
+  minimum-approvals:
+    description: Minimum number of approvals to progress workflow
+    required: false
 runs:
   using: docker
   image: docker://ghcr.io/trstringer/manual-approval:1.1.3
