--- a/action.yaml
+++ b/action.yaml
@@ -12,4 +12,4 @@ inputs:
     required: false
 runs:
   using: docker
-  image: docker://docker.io/puskartrital/manual-approval:latest
+  image: docker://docker.io/puskartrital/manual-approval:dev
